<resources>
    <string name="app_name"></string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_change_pass">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>