<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/navi_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_24"/>
        <item android:id="@+id/navi_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history_24"/>
        <item android:id="@+id/navi_favorite"
            android:title="@string/nav_favorite"
            android:icon="@drawable/ic_favorite_24"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/navi_profile"
                android:title="@string/nav_profile"
                android:icon="@drawable/ic_person_24"/>
            <item android:id="@+id/navi_pass"
                android:title="@string/nav_change_pass"
                android:icon="@drawable/ic_lock_24"/>
            <item android:id="@+id/logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/ic_baseline_login_24"/>
        </menu>
    </item>

</menu>